--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,350 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--font-family-regular), sans-serif;
+  font-variation-settings: 'wght' var(--font-weight-regular);
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+  font-size: 18px;
+  margin-block: 100px;
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.content-width {
+  inline-size: var(--content-width);
+}
+
+.header {
+  padding-block: clamp(120px, 101.79px + 2.73vh, 128px);
+  border: 2px solid var(--accent-color);
+  text-transform: uppercase;
+  display: flex;
+  gap: 20px;
+  margin-block-end: 50px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--font-family-accent);
+  background-color: var(--bg-color);
+}
+
+.logo {
+  font-size: clamp(49px, 43.36px + 1.502vw, 65px);
+}
+
+.header__title {
+  font-size: clamp(14px, 10.672px + 0.845vw, 23px);
+}
+
+.main {
+  display: grid;
+  gap: 50px;
+}
+
+.card {
+  border: 2px solid var(--accent-color);
+  padding-block-end: 25px;
+  background-color: var(--bg-color);
+}
+
+.card__title {
+  font-variation-settings: 'wght' var(--font-weight-title);
+  font-size: inherit;
+  padding: 5px 10px;
+}
+
+.card__items {
+  display: grid;
+  gap: 25px;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.label {
+  position: absolute;
+  z-index: 1;
+  font-family: var(--font-family-accent);
+  right: 25px;
+  top: 25px;
+  font-size: 14px;
+  mix-blend-mode: hard-light;
+  text-shadow:
+    -1px 0 var(--stroke-color),
+    0 1px var(--stroke-color),
+    1px 0 var(--stroke-color),
+    0 -1px var(--stroke-color);
+}
+
+@supports ((text-stroke: 1px #fff) or (-webkit-text-stroke: 1px #fff)) {
+  .label {
+    -webkit-text-stroke: 1px var(--stroke-color);
+    text-stroke: 1px var(--stroke-color);
+    text-shadow: none;
+  }
+}
+
+.card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+  border-block: 2px solid var(--accent-color);
+}
+
+.first_sprint-start {
+  filter: invert(100%);
+}
+
+.first_sprint-end {
+  filter: sepia(200%);
+}
+
+.second_sprint-start {
+  filter: brightness(120%);
+}
+
+.second_sprint-end {
+  filter: contrast(150%);
+}
+
+.third_sprint-start {
+  filter: hue-rotate(220deg) opacity(80%);
+}
+
+.third_sprint-end {
+  filter: grayscale(80%);
+}
+
+.fourth_sprint {
+  filter: saturate(200%);
+}
+
+.card__text {
+  display: grid;
+  gap: 27px;
+  margin-inline: 25px;
+}
+
+.card__buttons {
+  justify-self: end;
+  margin-inline-end: 25px;
+  display: flex;
+  gap: 5px;
+  block-size: 38px;
+}
+
+.card__icon-button {
+  padding: 0;
+  border: none;
+  background-color: var(--bg-color);
+  border: 2px solid transparent;
+  transition: border 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+}
+
+.like-icon {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  animation: opacity 0.3s 0.3s ease-in;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s ease;
+}
+
+.like-icon:hover .core {
+  fill: var(--contour-color);
+  transition: fill 0.3s ease;
+}
+
+.like-icon:active .core {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s ease;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s ease;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s ease;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour-color);
+  transition: fill 0.3s 0.05s ease;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s ease;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s 0.05s ease;
+}
+
+.contour {
+  fill: var(--contour-color);
+  transition: fill 0.1s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-main-color);
+  transition: fill 0.3s 0.06s ease;
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: scale 0.1s 0.3s ease-in;
+}
+
+.button-style {
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.button-style:focus {
+  outline: none;
+}
+
+.button-style:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.button-style::before {
+  content: '';
+  display: block;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 100%; 
+  position: absolute;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  transform-origin: center left;
+}
+
+.button-style:hover::before {
+  transform: scaleX(1);
+}
+
+.card__like-button {
+  inline-size: 130px;
+}
+
+.button__text {
+  font-family: var(--font-family-accent);
+  font-size: 14px;
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+  color: var(--bg-color);
+  transition: color 0.5s ease-in-out;
+}
+
+.save-button {
+  justify-self: center;
+  inline-size: fit-content;
+  block-size: 55px;
+  gap: 8px;
+  padding-block: 15px;
+  padding-inline: 18px;
+}
+
+.save-button:focus {
+  outline: none;
+}
+
+.save-button:focus-visible {
+  box-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.save-icon {
+  block-size: 100%;
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
+}
+
+footer .save-button svg {
+  fill: var(--bg-color);
+}
+
+.dialog-save[open] {
+  text-transform: uppercase;
+  padding-block: 30px;
+  padding-inline: 30px;
+  inline-size: 357px;
+  display: grid;
+  gap: 30px;
+  border: 2px solid var(--accent-color);
+}
+
+.dialog-save::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.dialog__content {
+  display: grid;
+  grid-auto-flow: column;
+  gap: 20px;
+  align-items: center;
+  line-height: 21px;
+}
+
+.dialog__button {
+  block-size: 38px;
+  background-color: var(--bg-color);
+  cursor: pointer;
+}
+
+.dialog__save-icon {
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+@media (width <= 375px) {
+  :root {
+    --content-width: 100%;
+  }
+
+  .label {
+    right: 11px;
+  }
+
+  .save-button {
+    block-size: 84px;
+    flex-direction: column;
+  }
 }
