--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,6 @@
 
 .card__icon-button {
   padding: 0;
-  border: none;
   background-color: var(--bg-color);
   border: 2px solid transparent;
   transition: border 0.3s ease;
@@ -259,8 +258,8 @@
   content: '';
   display: block;
   background-color: var(--accent-color);
-  width: 100%;
-  height: 100%; 
+  inline-size: 100%;
+  block-size: 100%;
   position: absolute;
   transform: scaleX(0);
   transition: transform 0.5s ease-in-out;
