--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
   font-variation-settings: 'wght' var(--font-weight-regular);
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 100px;
   align-items: center;
   font-size: 18px;
   margin-block: 100px;
@@ -31,16 +31,15 @@
 }
 
 .header {
-  padding-block: clamp(120px, 101.79px + 2.73vh, 128px);
+  padding-block: clamp(7.5rem, 0.751vw + 7.324rem, 8rem);
   border: 2px solid var(--accent-color);
   text-transform: uppercase;
   display: flex;
   gap: 20px;
-  margin-block-end: 50px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: var(--font-family-accent);
+  font-family: var(--font-family-accent), fantasy;
   background-color: var(--bg-color);
 }
 
@@ -79,9 +78,10 @@
 }
 
 .label {
+  opacity: 50%;
   position: absolute;
   z-index: 1;
-  font-family: var(--font-family-accent);
+  font-family: var(--font-family-accent), fantasy;
   right: 25px;
   top: 25px;
   font-size: 14px;
@@ -109,31 +109,31 @@
   border-block: 2px solid var(--accent-color);
 }
 
-.first_sprint-start {
+.filter__invert {
   filter: invert(100%);
 }
 
-.first_sprint-end {
+.filter__sepia {
   filter: sepia(200%);
 }
 
-.second_sprint-start {
+.filter__brightness {
   filter: brightness(120%);
 }
 
-.second_sprint-end {
+.filter__contrast {
   filter: contrast(150%);
 }
 
-.third_sprint-start {
+.filter__opacity_hue-rotate {
   filter: hue-rotate(220deg) opacity(80%);
 }
 
-.third_sprint-end {
+.filter__grayscale {
   filter: grayscale(80%);
 }
 
-.fourth_sprint {
+.filter__saturate {
   filter: saturate(200%);
 }
 
@@ -147,19 +147,18 @@
   justify-self: end;
   margin-inline-end: 25px;
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
-  block-size: 38px;
 }
 
 .card__icon-button {
+  display: flex;
   padding: 0;
+  block-size: 38px;
   background-color: var(--bg-color);
   border: 2px solid transparent;
   transition: border 0.3s ease;
-}
-
-.card__icon-button:focus {
-  outline: none;
 }
 
 .card__icon-button:focus-visible {
@@ -167,8 +166,6 @@
 }
 
 .like-icon {
-  width: 100%;
-  height: 100%;
   cursor: pointer;
 }
 
@@ -182,42 +179,42 @@
 
 .core {
   fill: transparent;
-  transition: fill 0.3s 0.03s ease;
+  transition: fill 0.3s 0.03s linear;
 }
 
 .like-icon:hover .core {
   fill: var(--contour-color);
-  transition: fill 0.3s ease;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:active .core {
   fill: var(--heart-main-color);
-  transition: fill 0.3s ease;
+  transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .core {
   fill: var(--heart-main-color);
-  transition: fill 0.3s ease;
+  transition: fill 0.3s linear;
 }
 
 .main-body {
   fill: transparent;
-  transition: fill 0.3s ease;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:hover .main-body {
   fill: var(--contour-color);
-  transition: fill 0.3s 0.05s ease;
+  transition: fill 0.3s 0.05s linear;
 }
 
 .like-icon:active .main-body {
   fill: var(--heart-main-color);
-  transition: fill 0.3s ease;
+  transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .main-body {
   fill: var(--heart-main-color);
-  transition: fill 0.3s 0.05s ease;
+  transition: fill 0.3s 0.05s linear;
 }
 
 .contour {
@@ -227,7 +224,7 @@
 
 .like-icon.is-liked .contour {
   fill: var(--heart-main-color);
-  transition: fill 0.3s 0.06s ease;
+  transition: fill 0.3s 0.06s linear;
 }
 
 .like-icon.is-liked .heart {
@@ -246,7 +243,7 @@
   cursor: pointer;
 }
 
-.button-style:focus {
+button:focus {
   outline: none;
 }
 
@@ -272,16 +269,16 @@
 
 .card__like-button {
   inline-size: 130px;
+  block-size: 38px;
 }
 
 .button__text {
-  font-family: var(--font-family-accent);
+  font-family: var(--font-family-accent), fantasy;
   font-size: 14px;
   position: relative;
   z-index: 1;
   mix-blend-mode: difference;
   color: var(--bg-color);
-  transition: color 0.5s ease-in-out;
 }
 
 .save-button {
@@ -293,14 +290,6 @@
   padding-inline: 18px;
 }
 
-.save-button:focus {
-  outline: none;
-}
-
-.save-button:focus-visible {
-  box-shadow: 2px 2px 0 var(--accent-color);
-}
-
 .save-icon {
   block-size: 100%;
   position: relative;
@@ -308,7 +297,7 @@
   mix-blend-mode: difference;
 }
 
-footer .save-button svg {
+main .save-button svg {
   fill: var(--bg-color);
 }
 
